Fix spacing for FAQ section in Merchant page

--- a/ktc-web/scss/merchant.scss
+++ b/ktc-web/scss/merchant.scss
@@ -379,6 +379,10 @@ section#section-merchant-register-form {
   }
 }
 
+#content-merchant-faq {
+  padding-top: 60px;
+}
+
 #faq ol {
   list-style: decimal;
   padding-left: 16px;
